[package]
name = "expr"
version = "0.3.2"
authors = ["J/A <archer884@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.3"
serde = { version = "1.0.119", features = ["derive"] }
smallvec = "1.6.1"
thiserror = "1.0.23"
